# dex_hand_project

./: .gitattributes  .gitignore  README.md  REFACTOR_SUMMARY.md  TACTILE_BACKENDS.md  pyproject.toml  requirements.txt
apps/: __init__.py  collect_scripted_lerobot.py  collect_teleop_lerobot.py
assets/: __init__.py
assets/bases/: rethink_minimal_mount.xml
assets/grippers/dex_hand/: dex_hand.xml
assets/grippers/pika_gripper/: pika_gripper.xml
assets/robots/rm75b/: rm75b.xml
configs/: __init__.py  current_robot.json  teleop.json  ycb_objects.lock.txt
configs/robot_profiles/: rm75b_dex_hand.json  rm75b_pika_gripper.json
docs/: egad_objects.lock.txt
examples/: __init__.py  ik_trajectory.py  manipulation_task_playback.py  random_control.py  robot_preview.py
source/: assets.py  geometry.py  registry.py
source/cli/: __init__.py  grasp_search.py  robot_config.py
source/code_summary/: code_list.txt  code_summary.py  code_summary.txt
source/control/: __init__.py  arm.py  common.py  composite.py  controllers.py  end_effectors.py
source/demos/: benchmark_grasp_catalog.py  collect_scripted_lerobot.py  collect_teleop_lerobot.py  common.py  grasp_search_cli.py  ik_sine_demo.py  manipulation_task_playback.py  random_demo.py  robot_preview_demo.py  search_mesh_force_closure.py  smoke_test.py  tactile_contact_validation.py  tactile_preview.py  tactile_probe_demo.py  tactile_sampling_plot.py  tactile_surface_fitting.py  validate_scripted_strategy.py  validate_standalone_grasp.py  visualize_grasp_benchmark.py
source/demos/strategies/: __init__.py  base.py  lift.py  registry.py
source/environments/: assets.py  controllers.py  manipulation_tasks.py  overlays.py  rl_env.py  robot_builder.py  robot_config.py  scene.py  tactile_layout.py  tactile_sensors.py  tasks.py  transforms.py
source/environments/core/: __init__.py  registry.py
source/environments/manipulation/: __init__.py  arenas.py  base.py  bindings.py  factory.py  lift.py  objects.py  placement.py  stack.py
source/envs/: __init__.py  rl_env.py
source/envs/core/: __init__.py  registry.py  tasks.py
source/envs/manipulation/: __init__.py  arenas.py  base.py  bindings.py  builtins.py  door.py  factory.py  lift.py  nut_assembly.py  object_catalog.py  objects.py  pick_place.py  placement.py  push.py  rewards.py  stack.py
source/grasping/: __init__.py  approach_path_search.py  constants.py  dex_hand_surface.py  grasp_config_search.py  hand_closure_search.py  mesh_pointcloud.py  pika_gripper_search.py  pika_gripper_surface.py  standalone_validator.py
source/imitation/: __init__.py  dataset.py  diffusion_policy.py  evaluate_diffusion.py  schema.py  train_diffusion.py
source/robots/: __init__.py  builder.py  config.py  defaults.py  descriptors.py  registry.py  scene.py
source/robots/arms/: __init__.py  rm75b.py
source/robots/bases/: __init__.py  rethink_minimal_mount.py
source/robots/hands/: __init__.py  _surface_fitting.py  dex_hand.py  dex_hand_tactile.py  pika_gripper.py
source/runtime/: __init__.py  pacing.py
source/scripted/: __init__.py  base.py  lift.py  registry.py
source/sensors/: __init__.py  base.py
source/sensors/tactile/: __init__.py  _surface_fitting.py  dex_hand.py  pika_gripper.py  probe.py  signal_processing.py  surface_fitting.py
source/teleop/: __init__.py  config.py  devices.py  glove_processing.py  lerobot_recorder.py  mapping.py  ui.py
source/viz/: __init__.py  grasp_benchmark.py  overlays.py  tactile.py  teleop_dashboard.py
source/workflows/: __init__.py  grasp_benchmark.py
tests/: test_architecture_boundaries.py  test_grasp_config_pipeline.py  test_scripted_state.py  test_smoke_envs.py  test_tactile_layout.py  test_task_registry.py
tools/: __init__.py  code_summary.py  download_maniskill_objects.py  grasp_search.py  grasp_search_single_file.py  render_object_catalog.py  run_smoke_checks.py
tools/grasping/: __init__.py  benchmark_catalog.py  search_grasp.py  validate_scripted_strategy.py  visualize_benchmark.py
tools/tactile/: __init__.py  interactive_probe.py  plot_surfaces.py  preview_layout.py  validate_contacts.py
(+74 files in other folders)
