[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dex-hand-project"
version = "0.1.0"
description = "MuJoCo RM75B and dexterous-hand manipulation environments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "mujoco",
    "gymnasium",
    "matplotlib",
    "opencv-python",
    "Pillow",
    "trimesh",
]

[project.optional-dependencies]
hardware = [
    "openvr",
    "pyserial",
    "PyBluez @ git+https://github.com/pybluez/pybluez.git",
]
learning = [
    "torch",
    "torchvision",
    "torchcodec",
    "lerobot>=0.4",
]
assets = ["mani-skill"]
dev = [
    "ruff",
    "pytest",
]

[project.scripts]
dex-smoke-test = "tools.run_smoke_checks:main"
dex-object-download = "tools.download_maniskill_objects:main"
dex-object-catalog = "tools.render_object_catalog:main"
dex-code-summary = "tools.code_summary:main"
dex-grasp-search = "tools.grasping.search_grasp:main"
dex-grasp-validate = "tools.grasping.validate_grasp:main"
dex-grasp-benchmark = "tools.grasping.benchmark_catalog:main"
dex-grasp-benchmark-plot = "tools.grasping.visualize_benchmark:main"
dex-scripted-validate = "tools.grasping.validate_scripted_strategy:main"
dex-tactile-preview = "tools.tactile.preview_layout:main"
dex-tactile-probe = "tools.tactile.interactive_probe:main"
dex-tactile-plot = "tools.tactile.plot_surfaces:main"
dex-tactile-validate = "tools.tactile.validate_contacts:main"
dex-vive-test = "source.teleop.vive.vive_link_test:main"
dex-vive-glove = "source.teleop.vive.vive_glove_hand_control:main"
dex-collect-teleop = "apps.collect_teleop_lerobot:main"
dex-collect-scripted = "apps.collect_scripted_lerobot:main"
dex-task-playback = "examples.manipulation_task_playback:main"
dex-robot-preview = "examples.robot_preview:main"
dex-ik-trajectory = "examples.ik_trajectory:main"
dex-random-control = "examples.random_control:main"
dex-glove-test = "source.teleop.bluetooth_glove.bluetooth_glove_test:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = [
    "source*",
    "apps*",
    "examples*",
    "tools*",
    "assets*",
    "configs*",
]

[tool.setuptools.package-data]
assets = [
    "arenas/*.xml",
    "bases/*.xml",
    "bases/meshes/**/*",
    "grippers/**/*",
    "robots/**/*",
    "textures/*",
]
configs = [
    "current_robot.json",
    "robot_profiles/*.json",
    "teleop.json",
]

[tool.setuptools.exclude-package-data]
assets = ["maniskill/**/*"]
configs = ["grasps/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
